@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023 gematik GmbH
+ * Copyright (c) 2024 gematik GmbH
  * 
  * Licensed under the Apache License, Version 2.0 (the License);
  * you may not use this file except in compliance with the License.
@@ -21,7 +21,6 @@ import de.gematik.test.tiger.proxy.TigerProxy;
 import de.gematik.test.tiger.proxy.data.ModificationDto;
 import jakarta.validation.constraints.NotBlank;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.Data;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -54,9 +53,7 @@ public class TigerModificationController {
 
   @GetMapping(value = "/modification", produces = MediaType.APPLICATION_JSON_VALUE)
   public List<ModificationDto> getModifications() {
-    return tigerProxy.getModifications().stream()
-        .map(ModificationDto::from)
-        .collect(Collectors.toList());
+    return tigerProxy.getModifications().stream().map(ModificationDto::from).toList();
   }
 
   @DeleteMapping(value = "/modification/{name}")
