@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023 gematik GmbH
+ * Copyright (c) 2024 gematik GmbH
  * 
  * Licensed under the Apache License, Version 2.0 (the License);
  * you may not use this file except in compliance with the License.
@@ -119,13 +119,13 @@ public class RbelHttpResponseConverter implements RbelConverterPlugin {
     final List<String> headerList =
         Arrays.stream(content.substring(endOfFirstLine, endOfBodyPosition).split(eol))
             .filter(line -> !line.isEmpty() && !line.startsWith("HTTP"))
-            .collect(Collectors.toList());
+            .toList();
 
     RbelElement headerElement =
         new RbelElement(
             headerList.stream().collect(Collectors.joining(eol)).getBytes(rbel.getElementCharset()),
             rbel);
-    final RbelMultiMap headerMap =
+    final RbelMultiMap<RbelElement> headerMap =
         headerList.stream()
             .map(line -> parseStringToKeyValuePair(line, converter, headerElement))
             .collect(RbelMultiMap.COLLECTOR);
