@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023 gematik GmbH
+ * Copyright (c) 2024 gematik GmbH
  * 
  * Licensed under the Apache License, Version 2.0 (the License);
  * you may not use this file except in compliance with the License.
@@ -29,7 +29,6 @@ import java.nio.file.Path;
 import java.time.ZonedDateTime;
 import java.util.*;
 import java.util.function.BiConsumer;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -105,8 +104,7 @@ public class RbelFileWriter {
   }
 
   private List<RbelElement> readRbelFileStream(Stream<String> rbelFileStream) {
-    final List<String> rawMessageStrings =
-        rbelFileStream.filter(StringUtils::isNotEmpty).collect(Collectors.toList());
+    final List<String> rawMessageStrings = rbelFileStream.filter(StringUtils::isNotEmpty).toList();
     List<RbelElement> list = new ArrayList<>();
     log.info("Found {} messages in file, starting parsing...", rawMessageStrings.size());
     int numberOfParsedMessages = 0;
