@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023 gematik GmbH
+ * Copyright (c) 2024 gematik GmbH
  * 
  * Licensed under the Apache License, Version 2.0 (the License);
  * you may not use this file except in compliance with the License.
@@ -23,7 +23,6 @@ import java.security.Key;
 import java.util.Base64;
 import java.util.Collection;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import javax.crypto.spec.SecretKeySpec;
 import org.jose4j.jca.ProviderContext;
 import org.jose4j.jwe.JsonWebEncryption;
@@ -117,7 +116,7 @@ public class RbelJweSerializer implements RbelSerializer {
                                 new String(
                                     rbelWriter.renderTree(childNode).getContent(),
                                     childNode.getElementCharset()))
-                        .collect(Collectors.toList()));
+                        .toList());
               } else {
                 jwe.setHeader(
                     header.getKey().orElseThrow(),
